server will start and login page works

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "lumbr-social",
   "version": "1.0.0",
-  "description": "",
+  "description": "Lumbr Social",
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-mongo": "^4.4.1",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "method-override": "^3.0.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.6",
     "morgan": "^1.10.0",
@@ -20,10 +21,10 @@
     "validator": "^13.6.0"
   },
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "The lumberJacks",
   "license": "ISC"
 }
